Fixed Github and Slack button not showing up on mobile

--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -18,7 +18,7 @@
 
 .mobile-top-nav-area .close-button{
 	text-align: right;
-	font-size:1.2em;	
+	font-size:1.2em;
 	cursor: pointer;
 }
 
@@ -47,8 +47,8 @@
 }
 
 .mobile-top-nav .social-media a{
-	margin:0 20px;
-	font-size:1.3em;	
+	margin:0 12px;
+	font-size:1.3em;
 }
 
 .mobile-hamburger-area{
@@ -104,9 +104,9 @@
 @media(max-width:470px){
 	.pitch-group{
 		margin-top:30%;
-		margin-bottom:30%;	
+		margin-bottom:30%;
 	}
-	
+
 	.pitch-group h1{
 		font-size:2.5em;
 	}
@@ -160,7 +160,7 @@
 @media(max-width: 430px){
 	.team-image figcaption{
 		font-size:1.2em;
-		top:30%;	
+		top:30%;
 	}
 }
 
@@ -169,9 +169,9 @@
 		padding-left:0;
 		padding-right:0;
 	}
-	
+
 	.team-image figcaption{
-		left:15%;	
+		left:15%;
 	}
 }
 /*******
@@ -230,15 +230,15 @@
 
 @media(max-width:1357px){
 	.post-image-area .post-info.overlay-bottom{
-		top:16%;	
+		top:16%;
 	}
 }
 
 @media(max-width:1035px){
 	.post-image-area .post-info.overlay-bottom{
-		top:10%;	
+		top:10%;
 	}
-	
+
 	.post-image-area .post-info .title{
 		font-size:3em;
 	}
@@ -247,15 +247,15 @@
 
 @media(max-width:822px){
 	.single-blog-post .post-content{
-		top:-30px;	
+		top:-30px;
 		padding-left:35px;
 		padding-right:35px;
 	}
-	
+
 	.post-image-area .post-info.overlay-bottom{
-		top:7%;	
+		top:7%;
 	}
-	
+
 	.post-image-area .post-info .title{
 		font-size:2em;
 	}
@@ -265,11 +265,11 @@
 	.single-blog-post .post-content{
 		top:-15px;
 	}
-	
+
 	.post-image-area .post-info.overlay-bottom{
-		top:0%;	
+		top:0%;
 	}
-	
+
 	.post-image-area .post-info .title{
 		font-size:2em;
 		margin-bottom:0px;
